
   - addDefaultServant
   - removeDefaultServant
   - findDefaultServant

  These methods provide a simpler way of using default servants in
  Ice. Please refer to the manual for more information.

- Using the --depend option with Slice compilers that support it no 
  longer outputs dependency info even if the Slice file itself 
  contains errors.


C++ Changes
============

- Fixed a bug where an SSL connection was rejected because of a
  certificate validation failure even if IceSSL.VerifyPeer=0.

- Added ice_stackTrace() method to Exception classes, which returns
  the exception stack trace on platforms/compilers that support it.
  Currently this is only supported with the GCC compiler.

- Removed AMD_Array_Object_ice_invoke class and instead added an
  ice_response method to AMD_Object_ice_invoke that uses the array
  type.

- The system logger (enabled when Ice.UseSyslog is set) now uses the 
  value of Ice.ProgramName as the log identifier prefix.

- Fixed crash if Application::main() or Service::main() were called 
  with argc == 0.


Java Changes
============

- The translator no longer generates one-shot constructors for class,
  struct and exception types if doing so would exceed Java's limit of
  255 parameters for a method.

- Fixed a bug where an outgoing SSL connection was allowed even though
  certificate validation failed.

- A holder class generated for a Slice class or interface now extends
  the generic base class Ice.ObjectHolderBase and implements the
  streaming interface Ice.ReadObjectCallback.

- slice2java no longer generates a <name>OperationsNC interface for
  local interfaces and classes. This makes the code easier to browse
  with IDEs.

- slice2java now preserves javadoc comments that appear in the Slice
  source and writes them through to the corresponding APIs in the
  generated code.

- Ice.jar and Freeze.jar now include source files. This allows IDEs
  such as Eclipse to browse the Ice source code and to display javadoc